--- a/carousel.html
+++ b/carousel.html
@@ -52,7 +52,7 @@
     color: #666666;
     opacity: 1;
   }
-
+  
   .inactive {
     display: block;
     background-color: '';
@@ -60,7 +60,7 @@
     border-bottom: none;
     opacity: 0.7;
   }
-
+  
   @media (max-width: 991px) {
     .inactive:after {
       width: 0 !important;
@@ -85,7 +85,7 @@
       font-size: 14px !important;
     }
   }
-
+  
   @media (max-width: 767px) {
     .title-nav-item:nth-child(2) {
       border-left: none;
@@ -94,16 +94,16 @@
     .chevs {
       display: flex !important;
     }
-
     .active-slide {
       display: block !important;
       border-bottom: none !important;
     }
-
     .inactive {
       display: none !important;
     }
-
+    .title-nav-item{
+      padding: 1% 2% 1% 2% !important;
+    }
     .read-more-tab{
       display: none !important;
     }
